retry message init

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>Catan Clock</title>
   </head>
+  <script src="utils.js"></script>
   <script src="messages.js"></script>
   <body>
     Catan clock website
