--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
   </head>
   <script src="utils.js"></script>
   <script src="messages.js"></script>
+  <script src="clock.js"></script>
   <body>
-    Catan clock website
+    <div id="clocks"></div>
+    <template id="clock">
+      <div class="clock">
+        <div class="name"></div>
+        <div class="time"></div>
+      </div>
+    </template>
   </body>
 </html>
