--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Catan Clock</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <script src="utils.js"></script>
   <script src="messages.js"></script>
