--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <script src="utils.js"></script>
   <script src="messages.js"></script>
-  <script src="clock.js"></script>
+  <script src="render.js"></script>
   <body>
     <div id="clocks"></div>
     <template id="clock">
