--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <script src="messages.js"></script>
   <script src="render.js"></script>
   <body>
-    <div id="clocks"></div>
+    <div class="content">
+      <div id="clocks"></div>
+    </div>
     <template id="clock">
       <div class="clock">
         <div class="name"></div>
