--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <script src="utils.js"></script>
   <script src="messages.js"></script>
+  <script src="controls.js"></script>
   <script src="render.js"></script>
   <body>
     <div class="content">
