hide play and pause buttons by default

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         <div id="clocks"></div>
         <div class="controls">
           <div>
-            <button id="play-button" onclick="clock.publish(resumeClock(clock.state()))">
+            <button id="play-button" onclick="clock.publish(resumeClock(clock.state()))" style="display: none">
               <i class="fa-solid fa-play"></i>
             </button>
-            <button id="pause-button" onclick="clock.publish(pauseClock(clock.state()))">
+            <button id="pause-button" onclick="clock.publish(pauseClock(clock.state()))" style="display: none">
               <i class="fa-solid fa-pause"></i>
             </button>
           </div>
