--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <script src="messages.js"></script>
   <script src="controls.js"></script>
   <script src="render.js"></script>
+  <script src="wake-lock.js"></script>
   <script>
     const clock = message("clock");
     renderLoop(clock.state, clock.publish);
