--- a/index.html
+++ b/index.html
@@ -32,17 +32,17 @@
     </div>
   </template>
   <template id="play-button">
-    <button onclick="clock.publish(resumeClock(clock.state()))">
+    <button class="clock-button" onclick="clock.publish(resumeClock(clock.state()))">
       <i class="fa-solid fa-play"></i>
     </button>
   </template>
   <template id="pause-button">
-    <button onclick="clock.publish(pauseClock(clock.state()))">
+    <button class="clock-button" onclick="clock.publish(pauseClock(clock.state()))">
       <i class="fa-solid fa-pause"></i>
     </button>
   </template>
   <template id="edit-button">
-    <button>
+    <button class="clock-button">
       <i class="fa-solid fa-pen-to-square"></i>
     </button>
   </template>
