focus players and use default time

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </div>
       <div class="time-input">
         <label for="time-input">Time:</label>
-        <input id="time-input" inputmode="numeric" maxlength="3"></input>
+        <input id="time-input" inputmode="numeric" maxlength="3" value="30"></input>
         <span>minutes per player</span>
       </div>
       <div id="create-clock-controls" class="controls">
