--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <div class="center">
+      <div id="connecting" class="hidden">Connecting...</div>
       <div id="content">
         <div id="clocks"></div>
         <div id="clock-controls" class="controls"></div>
@@ -61,17 +62,5 @@
   <script src="render.js"></script>
   <script src="edit.js"></script>
   <script src="wake-lock.js"></script>
-  <script>
-    const clock = message("clock");
-    clock.init().then(() => {
-      renderLoop(clock.state, clock.publish);
-      if (!clock.state()) {
-        openEditMenu((createClockMenu) => {
-          createClockMenu
-            .querySelector("#create-clock-controls")
-            .removeChild(createClockMenu.querySelector("#cancel-create-clock"));
-        });
-      }
-    });
-  </script>
+  <script src="connect.js"></script>
 </html>
