--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
   </head>
   <body>
     <div class="center">
-      <div id="connecting" class="hidden">Connecting...</div>
+      <div id="connecting" class="hidden">
+        <div>Connecting...</div>
+        <i class="fa-solid fa-spinner fa-spin"></i>
+      </div>
       <div id="content">
         <div id="clocks"></div>
         <div id="clock-controls" class="controls"></div>
