--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Catan Clock</title>
-    <meta name="viewport" content="width=device-width" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" />
     <link rel="stylesheet" href="styles.css" />
@@ -67,6 +67,7 @@
   <script src="controls.js"></script>
   <script src="render.js"></script>
   <script src="edit.js"></script>
-  <script src="wake-lock.js"></script>
   <script src="connect.js"></script>
+  <script src="viewport.js"></script>
+  <script src="wake-lock.js"></script>
 </html>
