close edit menu

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <span>seconds per turn</span>
       </div>
       <div id="create-clock-controls" class="controls">
-        <button id="cancel-create-clock" onclick="stopEditing()">Cancel</button>
+        <button id="cancel-create-clock" onclick="closeEditMenu()">Cancel</button>
         <button id="submit-create-clock" onclick="createNewClock()">Create New Clock</button>
       </div>
     </div>
