--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </div>
       <div id="create-clock-controls" class="controls">
         <button id="cancel-create-clock" onclick="closeEditMenu()">Cancel</button>
-        <button id="submit-create-clock" onclick="createNewClock()">Create New Clock</button>
+        <button id="submit-create-clock" onclick="createNewClock(clock.publish)">Create New Clock</button>
       </div>
     </div>
   </template>
@@ -66,7 +66,6 @@
   <script src="messages.js"></script>
   <script src="controls.js"></script>
   <script src="render.js"></script>
-  <script src="clock-instance.js"></script>
   <script src="edit.js"></script>
   <script src="connect.js"></script>
   <script src="viewport.js"></script>
