refactored elements and templates

--- a/index.html
+++ b/index.html
@@ -14,10 +14,7 @@
         <div>Connecting...</div>
         <i class="fa-solid fa-spinner fa-spin"></i>
       </div>
-      <div id="content">
-        <div id="clocks"></div>
-        <div id="clock-controls" class="controls"></div>
-      </div>
+      <div id="clock-state" class="hidden"></div>
       <div id="edit"></div>
     </div>
   </body>
