--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
       <div id="edit"></div>
     </div>
   </body>
+  <template id="increment-info">
+    <div><span id="increment-value"></span> second increment</div>
+  </template>
   <template id="clock">
     <div class="clock">
       <div class="name"></div>
