--- a/index.html
+++ b/index.html
@@ -68,6 +68,6 @@
   <script src="render.js"></script>
   <script src="edit.js"></script>
   <script src="connect.js"></script>
-  <script src="viewport.js"></script>
+  <script src="zoom.js"></script>
   <script src="wake-lock.js"></script>
 </html>
