screen lock icon

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
       <div id="clock-state" class="hidden"></div>
       <div id="edit"></div>
     </div>
+    <div class="screen-lock">
+      <i id="screen-locked" class="fa-solid fa-lock hidden"></i>
+      <i id="screen-unlocked" class="fa-solid fa-unlock"></i>
+    </div>
   </body>
   <template id="clock">
     <div class="clock">
